src/main/grammars/GDShader.bnf
{
  parserClass="kr.jaehoyi.gdshader.parser.GdsParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Gds"
  psiImplClassSuffix="Impl"
  psiPackage="kr.jaehoyi.gdshader.psi"
  psiImplPackage="kr.jaehoyi.gdshader.psi.impl"

  elementTypeHolderClass="kr.jaehoyi.gdshader.psi.GdsTypes"
  elementTypeClass="kr.jaehoyi.gdshader.psi.GdsElementType"
  tokenTypeClass="kr.jaehoyi.gdshader.psi.GdsTokenType"
  
  psiImplUtilClass="kr.jaehoyi.gdshader.psi.impl.GdsPsiImplUtil"
  
  tokens=[
  	UNTERMINATED_STRING_CONSTANT = "Unterminated string"
  	LINE_COMMENT = "Line comment"
  	BLOCK_COMMENT_START = "Block comment start"
	BLOCK_COMMENT_END = "Block comment end"
	BLOCK_COMMENT_CONTENT = "Block comment content"
  	PP_DEFINE_LINE = "Preprocessor define line"
    PP_UNDEF_LINE = "Preprocessor undef line"
    PP_ELSE_LINE = "Preprocessor else line"
    PP_ELIF_LINE = "Preprocessor elif line"
    PP_ENDIF_LINE = "Preprocessor endif line"
    PP_IFDEF_LINE = "Preprocessor ifdef line"
    PP_IFNDEF_LINE = "Preprocessor ifndef line"
    PP_IF_LINE = "Preprocessor if line"
    PP_ERROR_LINE = "Preprocessor error line"
    PP_INCLUDE_LINE = "Preprocessor include line"
    PP_PRAGMA_LINE = "Preprocessor pragma line"
    PP_UNKNOWN_LINE = "Preprocessor unknown line"
  ]
}

gdShaderFile ::= item*

item ::= top_level_declaration
	   
// Top Level Declarations
top_level_declaration ::= shader_type_declaration
		    		    | render_mode_declaration
		    		    | stencil_mode_declaration
		    		    | uniform_group_declaration
		    		    | uniform_declaration
		    		    | constant_declaration
		    		    | varying_declaration
		    		    | function_declaration
		    		    | struct_declaration

// Shader Type Declaration
shader_type_declaration ::= SHADER_TYPE shader_type_name SEMICOLON
{
	pin=1
}
shader_type_name ::= IDENTIFIER

// Render Mode Declaration
render_mode_declaration ::= RENDER_MODE render_mode_declarator_list SEMICOLON
{
	pin=1
}
render_mode_declarator_list ::= render_mode_name (COMMA render_mode_name)* { pin(".*")=1 }
render_mode_name ::= IDENTIFIER

// Stencil Mode Declaration
stencil_mode_declaration ::= STENCIL_MODE stencil_mode_declarator_list SEMICOLON
{
	pin=1
}
stencil_mode_declarator_list ::= stencil_mode_name (COMMA stencil_mode_name)* { pin(".*")=1 }
stencil_mode_name ::= IDENTIFIER | INT_CONSTANT

// Uniform Group Declaration
uniform_group_declaration ::= UNIFORM_GROUP uniform_group_name? (PERIOD uniform_group_name)* SEMICOLON
{
	pin=1
}
uniform_group_name ::= IDENTIFIER

// Uniform Declaration
uniform_declaration ::= uniform_header precision? type array_size? variable_name_decl array_size? hint_section? (OP_ASSIGN expression)? SEMICOLON
{
	pin=1
}

uniform_header ::= uniform_qualifier UNIFORM | UNIFORM
{
	pin=1
}
uniform_qualifier ::= GLOBAL | INSTANCE

hint_section ::= COLON hint_list
{
	pin=1
	recoverWhile=hint_section_recover
}
private hint_section_recover ::= !(SEMICOLON | OP_ASSIGN)

hint_list ::= hint (COMMA hint)* { pin(".*")=1 }

hint ::= simple_hint
	   | range_hint
	   | enum_hint
	   | instance_index_hint
	   
simple_hint ::= hint_identifier
range_hint ::= HINT_RANGE PARENTHESIS_OPEN number COMMA number (COMMA number)? PARENTHESIS_CLOSE { pin(".*")=1 }
enum_hint ::= HINT_ENUM PARENTHESIS_OPEN STRING_CONSTANT (COMMA STRING_CONSTANT)* PARENTHESIS_CLOSE { pin(".*")=1 }
instance_index_hint ::= HINT_INSTANCE_INDEX PARENTHESIS_OPEN INT_CONSTANT PARENTHESIS_CLOSE

hint_identifier ::= HINT_DEFAULT_WHITE_TEXTURE
			      | HINT_DEFAULT_BLACK_TEXTURE
			      | HINT_DEFAULT_TRANSPARENT_TEXTURE
			      | HINT_NORMAL_TEXTURE
			      | HINT_ROUGHNESS_NORMAL_TEXTURE
			      | HINT_ROUGHNESS_R
			      | HINT_ROUGHNESS_G
			      | HINT_ROUGHNESS_B
			      | HINT_ROUGHNESS_A
			      | HINT_ROUGHNESS_GRAY
			      | HINT_ANISOTROPY_TEXTURE
			      | HINT_SOURCE_COLOR
			      | HINT_COLOR_CONVERSION_DISABLED	
			      | HINT_SCREEN_TEXTURE
			      | HINT_NORMAL_ROUGHNESS_TEXTURE
			      | HINT_DEPTH_TEXTURE
			      | FILTER_NEAREST
			      | FILTER_LINEAR
			      | FILTER_NEAREST_MIPMAP
			      | FILTER_LINEAR_MIPMAP
			      | FILTER_NEAREST_MIPMAP_ANISOTROPIC
			      | FILTER_LINEAR_MIPMAP_ANISOTROPIC
			      | REPEAT_ENABLE
			      | REPEAT_DISABLE

// Constant Declaration
constant_declaration ::= CONST precision? type array_size? constant_declarator_list SEMICOLON
{
	pin=1
}

constant_declarator_list ::= constant_declarator (COMMA constant_declarator)* { pin(".*")=1 }
constant_declarator ::= variable_name_decl array_size? OP_ASSIGN initializer
{
	pin=1
}

// Varying Declaration
varying_declaration ::= VARYING interpolation_qualifier? precision? type array_size? variable_name_decl array_size? SEMICOLON
{
	pin=1
}
interpolation_qualifier ::= INTERPOLATION_FLAT | INTERPOLATION_SMOOTH

// Local Variable Declaration
local_variable_declaration ::= precision? type array_size? local_variable_declarator_list SEMICOLON {
	pin=4
}

local_variable_declarator_list ::= local_variable_declarator (COMMA local_variable_declarator)* {
	pin(".*")=1
}
local_variable_declarator ::= variable_name_decl array_size? (OP_ASSIGN initializer)?

variable_name_decl ::= IDENTIFIER
{
	implements=["com.intellij.psi.PsiNameIdentifierOwner" "kr.jaehoyi.gdshader.psi.GdsVariable"]
	methods=[getName setName getNameIdentifier getVariableSpec]
}

initializer ::= expression | initializer_list
initializer_list ::= CURLY_BRACKET_OPEN expression (COMMA expression)* CURLY_BRACKET_CLOSE { pin(".*")=1 }

array_size ::= BRACKET_OPEN expression? BRACKET_CLOSE
       
// Function Declaration
function_declaration ::= (precision? type) function_name_decl PARENTHESIS_OPEN parameter_list? PARENTHESIS_CLOSE block
{
	pin=3
}

function_name_decl ::= IDENTIFIER
{
	implements=["com.intellij.psi.PsiNameIdentifierOwner" " kr.jaehoyi.gdshader.psi.GdsFunction"]
	methods=[getName setName getNameIdentifier getFunctionSpec]
}

parameter_list ::= parameter (COMMA parameter)*
{
	pin(".*")=1
	recoverWhile=parameter_list_recover
}
private parameter_list_recover ::= !(PARENTHESIS_CLOSE)
parameter ::= parameter_qualifier? precision? type array_size? variable_name_decl array_size?
			  
parameter_qualifier ::= CONST? ARG_IN | CONST | ARG_OUT | ARG_INOUT

block ::= CURLY_BRACKET_OPEN block_body CURLY_BRACKET_CLOSE
block_body ::= statement_body*
{
	recoverWhile=block_body_recover
}
private block_body_recover ::= !(CURLY_BRACKET_CLOSE) 

// Struct Declarations
struct_declaration ::= STRUCT struct_name_decl struct_block SEMICOLON
{
	pin=1
}
struct_name_decl ::= IDENTIFIER
{
	implements="com.intellij.psi.PsiNameIdentifierOwner"
	methods=[getName setName getNameIdentifier]
}
struct_block ::= CURLY_BRACKET_OPEN struct_member_list CURLY_BRACKET_CLOSE
struct_member_list ::= struct_member*
{
	recoverWhile=struct_member_list_recover
}
private struct_member_list_recover ::= !(CURLY_BRACKET_CLOSE)
struct_member ::= precision? type array_size? struct_member_name_decl array_size? SEMICOLON
{
	pin=2
}
struct_member_name_decl ::= IDENTIFIER
{
	implements="com.intellij.psi.PsiNameIdentifierOwner"
	methods=[getName setName getNameIdentifier]
}

// Control Statements
control_statement ::= if_statement
					| for_statement
					| while_statement
					| do_while_statement
					| switch_statement
					
if_statement ::= CF_IF PARENTHESIS_OPEN expression PARENTHESIS_CLOSE statement_body else_clause?
{
	pin=1
}

else_clause ::= CF_ELSE (if_statement | statement_body)
{
	pin=1
}

for_statement ::= CF_FOR PARENTHESIS_OPEN for_init? SEMICOLON for_condition? SEMICOLON for_iteration? PARENTHESIS_CLOSE statement_body
{
	pin=1
}
for_init ::= precision? type local_variable_declarator_list
for_condition ::= expression
for_iteration ::= expression

do_while_statement ::= CF_DO statement_body CF_WHILE PARENTHESIS_OPEN expression PARENTHESIS_CLOSE SEMICOLON
{
	pin=1
}

while_statement ::= CF_WHILE PARENTHESIS_OPEN expression PARENTHESIS_CLOSE statement_body
{
	pin=1
}

switch_statement ::= CF_SWITCH PARENTHESIS_OPEN expression PARENTHESIS_CLOSE switch_block
{
	pin=1
}
switch_block ::= CURLY_BRACKET_OPEN switch_body CURLY_BRACKET_CLOSE
switch_body ::= case_clause*
{
	recoverWhile=switch_body_recover
}
private switch_body_recover ::= !(CURLY_BRACKET_CLOSE)
case_clause ::= CF_CASE expression COLON case_body | CF_DEFAULT COLON case_body
{
	pin=1
}
case_body ::= statement_body*

return_statement ::= CF_RETURN expression? SEMICOLON

simple_statement ::= CF_BREAK SEMICOLON
					| CF_CONTINUE SEMICOLON
					| CF_DISCARD SEMICOLON
					
statement_body ::= statement
				 | block
				 
statement ::= control_statement
			| return_statement
			| simple_statement
			| constant_declaration
			| function_call_statement
			| expression_statement
			| local_variable_declaration
			| SEMICOLON

// Expressions
function_call_statement ::= function_call SEMICOLON
{
	pin=1
}
expression_statement ::= expression SEMICOLON
expression ::= assign_expr

assign_expr ::= conditional_expr (assignment_operator conditional_expr)*
conditional_expr ::= logic_or_expr (QUESTION expression COLON expression)?
logic_or_expr ::= logic_and_expr (OP_OR logic_and_expr)*
logic_and_expr ::= bitwise_or_expr (OP_AND bitwise_or_expr)*
bitwise_or_expr ::= bitwise_xor_expr (OP_BIT_OR bitwise_xor_expr)*
bitwise_xor_expr ::= bitwise_and_expr (OP_BIT_XOR bitwise_and_expr)*
bitwise_and_expr ::= equality_expr (OP_BIT_AND equality_expr)*
equality_expr ::= relational_expr ((OP_EQUAL | OP_NOT_EQUAL) relational_expr)*
relational_expr ::= shift_expr ((OP_LESS | OP_LESS_EQUAL | OP_GREATER | OP_GREATER_EQUAL) shift_expr)*
shift_expr ::= additive_expr ((OP_SHIFT_LEFT | OP_SHIFT_RIGHT) additive_expr)*
additive_expr ::= multiplicative_expr ((OP_ADD | OP_SUB) multiplicative_expr)*
multiplicative_expr ::= unary_expr ((OP_MUL | OP_DIV | OP_MOD) unary_expr)*
unary_expr ::= (OP_NOT | OP_BIT_INVERT | OP_ADD | OP_SUB) unary_expr | (OP_INCREMENT | OP_DECREMENT)? postfix_expr
postfix_expr ::= primary (PERIOD function_call | PERIOD struct_member_name_ref | BRACKET_OPEN expression BRACKET_CLOSE)* (OP_INCREMENT | OP_DECREMENT)?

primary ::= literal
		  | function_call
		  | variable_name_ref
		  | PARENTHESIS_OPEN expression PARENTHESIS_CLOSE

function_call ::= (function_name_ref | type) array_size? PARENTHESIS_OPEN argument_list PARENTHESIS_CLOSE
{
	pin(".*")="PARENTHESIS_OPEN"
}

argument_list ::= [ initializer (COMMA initializer)* ] { pin(".*")=1 }

variable_name_ref ::= IDENTIFIER
{
	methods=[getReference]
}
function_name_ref ::= IDENTIFIER
{
	methods=[getReference]
}
struct_name_ref ::= IDENTIFIER
{
	methods=[getReference]
}
struct_member_name_ref ::= IDENTIFIER
{
	methods=[getReference]
}

// Keywords
precision ::= PRECISION_LOW | PRECISION_MEDIUM | PRECISION_HIGH

type ::= primitive_type
       | TYPE_SAMPLER2D
       | TYPE_ISAMPLER2D
       | TYPE_USAMPLER2D
       | TYPE_SAMPLER2DARRAY
       | TYPE_ISAMPLER2DARRAY
       | TYPE_USAMPLER2DARRAY
       | TYPE_SAMPLER3D
       | TYPE_ISAMPLER3D
       | TYPE_USAMPLER3D
       | TYPE_SAMPLERCUBE
       | TYPE_SAMPLERCUBEARRAY
       | TYPE_SAMPLEREXT
       | struct_name_ref
       
primitive_type ::= TYPE_VOID
			     | TYPE_BOOL
			     | TYPE_BVEC2
			     | TYPE_BVEC3
			     | TYPE_BVEC4
			     | TYPE_INT
			     | TYPE_IVEC2
			     | TYPE_IVEC3
			     | TYPE_IVEC4
			     | TYPE_UINT
			     | TYPE_UVEC2
			     | TYPE_UVEC3
			     | TYPE_UVEC4
			     | TYPE_FLOAT
			     | TYPE_VEC2
			     | TYPE_VEC3
			     | TYPE_VEC4
			     | TYPE_MAT2
			     | TYPE_MAT3
			     | TYPE_MAT4

literal ::= TRUE
		  | FALSE
		  | FLOAT_CONSTANT
		  | INT_CONSTANT
		  | UINT_CONSTANT
		  
number ::= (OP_SUB)? FLOAT_CONSTANT
		 | (OP_SUB)? INT_CONSTANT
		 | UINT_CONSTANT

// Operators
assignment_operator ::= OP_ASSIGN | OP_ASSIGN_ADD | OP_ASSIGN_SUB | OP_ASSIGN_MUL | OP_ASSIGN_DIV 
                        | OP_ASSIGN_MOD | OP_ASSIGN_SHIFT_LEFT | OP_ASSIGN_SHIFT_RIGHT | OP_ASSIGN_BIT_AND
                        | OP_ASSIGN_BIT_OR | OP_ASSIGN_BIT_XOR
