src/main/gen/kr/jaehoyi/gdshader/parser/GdsParser.java
// This is a generated file. Not intended for manual editing.
package kr.jaehoyi.gdshader.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static kr.jaehoyi.gdshader.psi.GdsTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class GdsParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return gdShaderFile(b, l + 1);
  }

  /* ********************************************************** */
  // multiplicative_expr ((OP_ADD | OP_SUB) multiplicative_expr)*
  public static boolean additive_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITIVE_EXPR, "<additive expr>");
    r = multiplicative_expr(b, l + 1);
    r = r && additive_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ((OP_ADD | OP_SUB) multiplicative_expr)*
  private static boolean additive_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!additive_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "additive_expr_1", c)) break;
    }
    return true;
  }

  // (OP_ADD | OP_SUB) multiplicative_expr
  private static boolean additive_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = additive_expr_1_0_0(b, l + 1);
    r = r && multiplicative_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_ADD | OP_SUB
  private static boolean additive_expr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expr_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, OP_ADD);
    if (!r) r = consumeToken(b, OP_SUB);
    return r;
  }

  /* ********************************************************** */
  // [ initializer (COMMA initializer)* ]
  public static boolean argument_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list")) return false;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT_LIST, "<argument list>");
    argument_list_0(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // initializer (COMMA initializer)*
  private static boolean argument_list_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = initializer(b, l + 1);
    p = r; // pin = 1
    r = r && argument_list_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (COMMA initializer)*
  private static boolean argument_list_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argument_list_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argument_list_0_1", c)) break;
    }
    return true;
  }

  // COMMA initializer
  private static boolean argument_list_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_0_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && initializer(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // BRACKET_OPEN expression? BRACKET_CLOSE
  public static boolean array_size(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_size")) return false;
    if (!nextTokenIs(b, BRACKET_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACKET_OPEN);
    r = r && array_size_1(b, l + 1);
    r = r && consumeToken(b, BRACKET_CLOSE);
    exit_section_(b, m, ARRAY_SIZE, r);
    return r;
  }

  // expression?
  private static boolean array_size_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_size_1")) return false;
    expression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // conditional_expr (assignment_operator conditional_expr)*
  public static boolean assign_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_EXPR, "<assign expr>");
    r = conditional_expr(b, l + 1);
    r = r && assign_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (assignment_operator conditional_expr)*
  private static boolean assign_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!assign_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "assign_expr_1", c)) break;
    }
    return true;
  }

  // assignment_operator conditional_expr
  private static boolean assign_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assignment_operator(b, l + 1);
    r = r && conditional_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // OP_ASSIGN | OP_ASSIGN_ADD | OP_ASSIGN_SUB | OP_ASSIGN_MUL | OP_ASSIGN_DIV 
  //                         | OP_ASSIGN_MOD | OP_ASSIGN_SHIFT_LEFT | OP_ASSIGN_SHIFT_RIGHT | OP_ASSIGN_BIT_AND
  //                         | OP_ASSIGN_BIT_OR | OP_ASSIGN_BIT_XOR
  public static boolean assignment_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_operator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_OPERATOR, "<assignment operator>");
    r = consumeToken(b, OP_ASSIGN);
    if (!r) r = consumeToken(b, OP_ASSIGN_ADD);
    if (!r) r = consumeToken(b, OP_ASSIGN_SUB);
    if (!r) r = consumeToken(b, OP_ASSIGN_MUL);
    if (!r) r = consumeToken(b, OP_ASSIGN_DIV);
    if (!r) r = consumeToken(b, OP_ASSIGN_MOD);
    if (!r) r = consumeToken(b, OP_ASSIGN_SHIFT_LEFT);
    if (!r) r = consumeToken(b, OP_ASSIGN_SHIFT_RIGHT);
    if (!r) r = consumeToken(b, OP_ASSIGN_BIT_AND);
    if (!r) r = consumeToken(b, OP_ASSIGN_BIT_OR);
    if (!r) r = consumeToken(b, OP_ASSIGN_BIT_XOR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // equality_expr (OP_BIT_AND equality_expr)*
  public static boolean bitwise_and_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwise_and_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BITWISE_AND_EXPR, "<bitwise and expr>");
    r = equality_expr(b, l + 1);
    r = r && bitwise_and_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_BIT_AND equality_expr)*
  private static boolean bitwise_and_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwise_and_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!bitwise_and_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bitwise_and_expr_1", c)) break;
    }
    return true;
  }

  // OP_BIT_AND equality_expr
  private static boolean bitwise_and_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwise_and_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_BIT_AND);
    r = r && equality_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // bitwise_xor_expr (OP_BIT_OR bitwise_xor_expr)*
  public static boolean bitwise_or_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwise_or_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BITWISE_OR_EXPR, "<bitwise or expr>");
    r = bitwise_xor_expr(b, l + 1);
    r = r && bitwise_or_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_BIT_OR bitwise_xor_expr)*
  private static boolean bitwise_or_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwise_or_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!bitwise_or_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bitwise_or_expr_1", c)) break;
    }
    return true;
  }

  // OP_BIT_OR bitwise_xor_expr
  private static boolean bitwise_or_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwise_or_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_BIT_OR);
    r = r && bitwise_xor_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // bitwise_and_expr (OP_BIT_XOR bitwise_and_expr)*
  public static boolean bitwise_xor_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwise_xor_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BITWISE_XOR_EXPR, "<bitwise xor expr>");
    r = bitwise_and_expr(b, l + 1);
    r = r && bitwise_xor_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_BIT_XOR bitwise_and_expr)*
  private static boolean bitwise_xor_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwise_xor_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!bitwise_xor_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bitwise_xor_expr_1", c)) break;
    }
    return true;
  }

  // OP_BIT_XOR bitwise_and_expr
  private static boolean bitwise_xor_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwise_xor_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_BIT_XOR);
    r = r && bitwise_and_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CURLY_BRACKET_OPEN block_body CURLY_BRACKET_CLOSE
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, CURLY_BRACKET_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CURLY_BRACKET_OPEN);
    r = r && block_body(b, l + 1);
    r = r && consumeToken(b, CURLY_BRACKET_CLOSE);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  /* ********************************************************** */
  // statement_body*
  public static boolean block_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_body")) return false;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_BODY, "<block body>");
    while (true) {
      int c = current_position_(b);
      if (!statement_body(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_body", c)) break;
    }
    exit_section_(b, l, m, true, false, GdsParser::block_body_recover);
    return true;
  }

  /* ********************************************************** */
  // !(CURLY_BRACKET_CLOSE)
  static boolean block_body_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_body_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, CURLY_BRACKET_CLOSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // statement_body*
  public static boolean case_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_body")) return false;
    Marker m = enter_section_(b, l, _NONE_, CASE_BODY, "<case body>");
    while (true) {
      int c = current_position_(b);
      if (!statement_body(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "case_body", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // CF_CASE expression COLON case_body | CF_DEFAULT COLON case_body
  public static boolean case_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_clause")) return false;
    if (!nextTokenIs(b, "<case clause>", CF_CASE, CF_DEFAULT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASE_CLAUSE, "<case clause>");
    r = case_clause_0(b, l + 1);
    if (!r) r = case_clause_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // CF_CASE expression COLON case_body
  private static boolean case_clause_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_clause_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CF_CASE);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && case_body(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // CF_DEFAULT COLON case_body
  private static boolean case_clause_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_clause_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CF_DEFAULT, COLON);
    r = r && case_body(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // logic_or_expr (QUESTION expression COLON expression)?
  public static boolean conditional_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONAL_EXPR, "<conditional expr>");
    r = logic_or_expr(b, l + 1);
    r = r && conditional_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (QUESTION expression COLON expression)?
  private static boolean conditional_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_expr_1")) return false;
    conditional_expr_1_0(b, l + 1);
    return true;
  }

  // QUESTION expression COLON expression
  private static boolean conditional_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, QUESTION);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CONST precision? type array_size? constant_declarator_list SEMICOLON
  public static boolean constant_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_declaration")) return false;
    if (!nextTokenIs(b, CONST)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT_DECLARATION, null);
    r = consumeToken(b, CONST);
    p = r; // pin = 1
    r = r && report_error_(b, constant_declaration_1(b, l + 1));
    r = p && report_error_(b, type(b, l + 1)) && r;
    r = p && report_error_(b, constant_declaration_3(b, l + 1)) && r;
    r = p && report_error_(b, constant_declarator_list(b, l + 1)) && r;
    r = p && consumeToken(b, SEMICOLON) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // precision?
  private static boolean constant_declaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_declaration_1")) return false;
    precision(b, l + 1);
    return true;
  }

  // array_size?
  private static boolean constant_declaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_declaration_3")) return false;
    array_size(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // variable_name_decl array_size? OP_ASSIGN initializer
  public static boolean constant_declarator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_declarator")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT_DECLARATOR, null);
    r = variable_name_decl(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, constant_declarator_1(b, l + 1));
    r = p && report_error_(b, consumeToken(b, OP_ASSIGN)) && r;
    r = p && initializer(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }
